--- a/monitoring-frontend/src/styles.css
+++ b/monitoring-frontend/src/styles.css
@@ -1,3 +1,19 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
-@import "primeflex/primeflex.css"
+@import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+.container {
+  max-width: 1024px;
+  margin: 0 auto;
+}
