--- a/monitoring-frontend/src/app/modules/common/components/navbar/navbar.component.html
+++ b/monitoring-frontend/src/app/modules/common/components/navbar/navbar.component.html
@@ -4,9 +4,14 @@
       <img
         src="/assets/images/logo.png"
         alt="Logo de la Universidad Católica de Pereira"
-        class="h-4rem"
+        class="h-3rem"
       />
     </a>
+    <div class="flex gap-3 ml-auto mr-6">
+      <a class="no-underline" routerLink="/">Inicio</a>
+      <a class="no-underline" routerLink="/monitoring/students">Estudiantes</a>
+      <a class="no-underline" routerLink="/monitoring/monitors">Monitores</a>
+    </div>
     <p-button
       icon="pi pi-user"
       [rounded]="true"
