--- a/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-page/monitoring-page.components.css
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-page/monitoring-page.components.css
@@ -3,6 +3,29 @@
 }
 
 .monitoring-list {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 380px;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .monitoring-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .monitoring-list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.monitoring-list::ng-deep .p-card {
+  height: 100%;
+}
+
+/* .monitoring-list {
   column-count: 1;
   column-gap: 1rem;
 }
@@ -22,4 +45,4 @@
   .monitoring-list {
     column-count: 3;
   }
-}
+} */
