--- a/monitoring-frontend/src/styles.css
+++ b/monitoring-frontend/src/styles.css
@@ -9,11 +9,32 @@ body {
   padding: 0;
 }
 
+body {
+  background-color: var(--gray-200);
+}
+
+h1,
+h2,
+h4,
+h4,
+h5,
+h5,
 p {
   margin: 0;
 }
 
+img {
+  max-width: 100%;
+}
+
 .container {
-  max-width: 1024px;
+  width: 100%;
+  max-width: 1280px;
   margin: 0 auto;
+}
+
+.page-layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
