--- a/monitoring-frontend/src/app/modules/monitoring/pages/monitors-page/monitors-page.component.html
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/monitors-page/monitors-page.component.html
@@ -1,7 +1,9 @@
 <main class="page-layout">
   <app-navbar></app-navbar>
-  <div class="flex-1 text-gray-600 container border-round-md bg-white my-6 p-3">
-    <h1 class="text-gray-600">Monitores</h1>
+  <div
+    class="flex-1 text-gray-600 container lg:border-round-md bg-white my-6 p-3"
+  >
+    <!-- <h1 class="text-gray-600">Monitor</h1> -->
     <p-tabMenu
       styleClass="mb-3"
       [model]="items"
