--- a/monitoring-frontend/src/app/modules/monitoring/pages/my-monitoring-page/my-monitoring-page.component.css
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/my-monitoring-page/my-monitoring-page.component.css
@@ -1,3 +1,14 @@
 :host {
   display: block;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.dialog::ng-deep .p-dialog-content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.dialog::ng-deep .p-dialog-content {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
