--- a/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-page/monitoring-page.components.css
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-page/monitoring-page.components.css
@@ -5,7 +5,7 @@
 .monitoring-list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-auto-rows: 380px;
+  /* grid-auto-rows: 380px; */
   gap: 1rem;
 }
 
