--- a/monitoring-frontend/src/app/modules/monitoring/pages/my-monitoring-agenda/my-monitoring-agenda.component.html
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/my-monitoring-agenda/my-monitoring-agenda.component.html
@@ -44,13 +44,13 @@
               [rounded]="true"
               [outlined]="true"
             ></p-button>
-            <p-button
+            <!-- <p-button
               pTooltip="Cancelar monitoria"
               tooltipPosition="bottom"
               icon="pi pi-ban"
               [rounded]="true"
               [outlined]="true"
-            ></p-button>
+            ></p-button> -->
           </div>
         </td>
       </tr>
