--- a/monitoring-frontend/src/styles.css
+++ b/monitoring-frontend/src/styles.css
@@ -38,3 +38,22 @@ img {
   flex-direction: column;
   min-height: 100vh;
 }
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp-1 {
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  -webkit-line-clamp: 2;
+}
+
+.line-clamp-3 {
+  -webkit-line-clamp: 3;
+}
