--- a/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.css
+++ b/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.css
@@ -13,33 +13,13 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-image: url('../../../../../assets/images/imagen-university.jpg');
+  background-image: url("../../../../../assets/images/imagen-university.jpg");
   background-size: cover;
   background-position: center;
-  overflow: hidden
+  overflow: hidden;
 }
 
-.card{
+.card {
   margin-top: 10rem;
   z-index: 1;
-}
-
-img {
-  margin-left: 5.9rem;
-  width: 10rem;
-  height: 10rem;
-}
-
-input {
-  margin-left: 4rem;
-  padding: 0.5rem;
-  margin-top: 0.3rem;
-}
-
-p-button {
-  margin-left: 6rem;
-}
-
-a {
-  margin-left: 4rem;
 }
