--- a/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -1,17 +1,46 @@
+<p-toast></p-toast>
+
 <div class="flex justify-content-center flex-wrap background-container">
-  <p-card class="card" [style]="{ width: '360px'}">
+  <p-card class="card">
     <ng-template pTemplate="header">
-        <img alt="logo" src="../../../../../assets/images/logo-login.png"/>
+      <div class="flex justify-content-center align-items-center">
+        <img
+          alt="logo"
+          src="/assets/images/logo-login.png"
+          class="w-10rem mt-4"
+        />
+      </div>
     </ng-template>
-    <ng-template pTemplate="content" >
-      <form  [formGroup]="loginForm">
-        <input pInputText type="text" placeholder="Correo" formControlName="email"/>
-        <input pInputText type="text" placeholder="Contraseña" formControlName="password"/>
-        <a routerLink="/register" >Registrarse</a>
+    <ng-template pTemplate="content">
+      <form [formGroup]="loginForm" class="flex flex-column gap-3">
+        <input
+          pInputText
+          type="text"
+          placeholder="Correo electrónico"
+          formControlName="email"
+          class="w-full"
+        />
+        <input
+          pInputText
+          type="password"
+          placeholder="Contraseña"
+          formControlName="password"
+          class="w-full"
+        />
+        <p-button
+          type="submit"
+          label="Ingresar"
+          (click)="login()"
+          styleClass="w-full"
+          [disabled]="loginForm.invalid"
+        ></p-button>
       </form>
     </ng-template>
-    <ng-template pTemplate="footer" >
-        <p-button label="Ingresar" (click)="validateUSer()" ></p-button>
+    <ng-template pTemplate="footer">
+      <p class="text-center">
+        <span>¿No tienes una cuenta?</span>
+        <a routerLink="/register" class="no-underline"> Registrate</a>
+      </p>
     </ng-template>
   </p-card>
 </div>
