--- a/monitoring-frontend/src/app/modules/auth/pages/register-page/register-page.component.css
+++ b/monitoring-frontend/src/app/modules/auth/pages/register-page/register-page.component.css
@@ -1,28 +1,8 @@
-#myVideo {
+#video {
   position: fixed;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
   z-index: -1;
-}
-
-select {
-  width: 18rem;
-  cursor: pointer;
-  background-color: #f5f5f5;
-  font-size: 16px;
-  padding: 8px;
-}
-
-textarea {
-  width: 18rem;
-}
-
-input {
-  width: 18rem;
-}
-
-p-password {
-  width: 18rem;
 }
