--- a/monitoring-frontend/src/app/modules/auth/pages/register-page/register-page.component.html
+++ b/monitoring-frontend/src/app/modules/auth/pages/register-page/register-page.component.html
@@ -1,82 +1,134 @@
-<video id="myVideo" autoplay muted loop>
-  <source src="https://uvirtual.ucp.edu.co/static/media/U--Virtual.36642e0fe9e4d5f356dd.webm" type="video/webm">
+<p-toast></p-toast>
+
+<video id="video" autoplay muted loop>
+  <source
+    src="https://uvirtual.ucp.edu.co/static/media/U--Virtual.36642e0fe9e4d5f356dd.webm"
+    type="video/webm"
+  />
   Tu navegador no soporta el formato de video.
 </video>
-<p-button (click)="goLogin()"><-</p-button>
-<p-card header="Crea un nuevo usuario" [style]="{ width: '335px' }" class="flex justify-content-center flex-wrap">
-  <form [formGroup]="userForm" (ngSubmit)="registerUser()" >
-    <div>
-      <!-- Email -->
-      <label for="email">Email:</label>
-      <br>
-      <input type="email" pInputText id="email" formControlName="email" required>
+<p-card header="Registrate" class="flex justify-content-center flex-wrap my-3">
+  <form
+    [formGroup]="registerForm"
+    (ngSubmit)="register()"
+    class="flex flex-column gap-2"
+  >
+    <!-- Email -->
+    <div class="flex flex-column gap-2 w-full">
+      <label for="email">Correo electrónico</label>
+      <input
+        pInputText
+        id="email"
+        styleClass="w-full"
+        formControlName="email"
+      />
     </div>
-    <br>
-    <div>
-      <!-- Password -->
-      <label for="password">Contraseña:</label>
-      <br>
-      <p-password type="password" id="password" formControlName="password" required minlength="6"  [toggleMask]="true"></p-password>
+    <!-- Email -->
+    <!-- Password -->
+    <div class="flex flex-column gap-2 w-full">
+      <label for="password">Contraseña</label>
+      <input
+        pInputText
+        type="password"
+        id="password"
+        styleClass="w-full"
+        formControlName="password"
+      />
+      @if (registerForm.controls.password.hasError("minlength")) {
+        <p class="text-red-600">La contraseña debe tener mínimo 6 carácteres</p>
+      }
     </div>
-    <br>
-    <!-- Sección de Perfil -->
-    <div formGroupName="profile">
-      <!-- Nombre -->
-      <div>
-        <label for="firstName">Nombre:</label>
-        <br>
-        <input type="text" pInputText id="firstName" formControlName="firstName" required>
+    <!-- Password -->
+    <!-- Profile -->
+    <div formGroupName="profile" class="flex flex-column gap-2">
+      <!-- First name -->
+      <div class="flex flex-column gap-2 w-full">
+        <label for="firstName">Nombre</label>
+        <input
+          pInputText
+          type="firstName"
+          id="firstName"
+          styleClass="w-full"
+          formControlName="firstName"
+        />
       </div>
-      <br>
-      <div>
-        <!-- Apellido -->
-        <label for="lastName">Apellido:</label>
-        <br>
-        <input type="text" pInputText id="lastName" formControlName="lastName" required>
+      <!-- First name -->
+      <!-- Last name -->
+      <div class="flex flex-column gap-2 w-full">
+        <label for="lastName">Apellido</label>
+        <input
+          pInputText
+          type="lastName"
+          id="lastName"
+          styleClass="w-full"
+          formControlName="lastName"
+        />
       </div>
-      <br>
-      <div>
-        <!-- Edad -->
-        <label for="age">Edad:</label>
-        <br>
-        <input type="number" pInputText id="age" formControlName="age" required>
+      <!-- Last name -->
+      <!-- Age -->
+      <div class="flex flex-column gap-2 w-full">
+        <label for="age">Edad</label>
+        <p-inputNumber
+          id="age"
+          inputId="integeronly"
+          styleClass="w-full"
+          formControlName="age"
+        ></p-inputNumber>
       </div>
-      <br>
-      <div>
-        <label for="gender">Género:</label>
-        <br>
-        <select id="gender" formControlName="gender" class="cursor-pointer">
-          <option value="Male" class="cursor-pointer">Masculino</option>
-          <option value="Female" class="cursor-pointer">Femenino</option>
-        </select>
+      <!-- Age -->
+      <!-- Gender -->
+      <div class="flex flex-column flex-1 gap-2">
+        <label for="gender">Género</label>
+        <p-dropdown
+          id="gender"
+          optionLabel="name"
+          placeholder="Selecciona tu género"
+          formControlName="gender"
+          [showClear]="true"
+          [options]="genders"
+          styleClass="w-full"
+        ></p-dropdown>
       </div>
-      <br>
-
-      <div>
-        <!-- Descripción -->
-        <label for="overview">Escribe sobre ti:</label>
-        <br>
-        <textarea id="overview" formControlName="overview"></textarea>
+      <!-- Gender -->
+      <!-- About me -->
+      <div class="flex flex-column flex-1 gap-2">
+        <label for="startTime">Sobre ti</label>
+        <textarea
+          rows="5"
+          cols="30"
+          pInputTextarea
+          formControlName="overview"
+        ></textarea>
       </div>
-      <br>
-      <div>
-        <label for="Materia">Materia:</label>
-        <br>
-        <select formControlName="degreeId" id="degreeId" class="cursor-pointer">
-          <option *ngFor="let item of infoDregree" [value]="item.id">{{ item.name }}</option>
-        </select>
+      <!-- About me -->
+      <!-- Degree -->
+      <div class="flex flex-column flex-1 gap-2">
+        <label for="degreed">Carrera</label>
+        <p-dropdown
+          id="degree"
+          optionLabel="name"
+          placeholder="Selecciona tu carrera"
+          formControlName="degree"
+          [showClear]="true"
+          [options]="degress"
+          styleClass="w-full"
+        ></p-dropdown>
       </div>
-
+      <!-- Degree -->
     </div>
-    <br>
-    <br>
-    <!-- Botón de Enviar -->
-    <p-button type="submit" class="cursor-pointer flex justify-content-center" >Crear cuenta</p-button>
-
+    <!-- Profile -->
+    <p-button
+      type="submit"
+      [disabled]="registerForm.invalid"
+      label="Registrate"
+      class="mt-3"
+      styleClass="w-full"
+    ></p-button>
   </form>
+  <ng-template pTemplate="footer">
+    <p class="text-center">
+      <span>¿Ya tienes una cuenta?</span>
+      <a routerLink="/login" class="no-underline"> Inicia sesión</a>
+    </p>
+  </ng-template>
 </p-card>
-
-
-
-
-
