--- a/monitoring-frontend/src/app/modules/monitoring/components/monitoring-management/monitoring-management.component.html
+++ b/monitoring-frontend/src/app/modules/monitoring/components/monitoring-management/monitoring-management.component.html
@@ -31,6 +31,14 @@
   @if (mode === "create") {
     <div class="flex flex-column gap-2 w-full">
       <label for="maxAvailablePlaces">Plazas máximas disponibles</label>
+      <!-- <p-dropdown -->
+        <!-- id="maxAvailablePlaces" -->
+        <!-- inputId="integeronly" -->
+        <!-- optionLabel="label" -->
+        <!-- placeholder="Seleccione el número de plazas" -->
+        <!-- formControlName="maxAvailablePlaces" -->
+        <!-- [options]="places"> -->
+      <!-- </p-dropdown> -->
       <p-inputNumber
         id="maxAvailablePlaces"
         inputId="integeronly"
