--- a/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.html
+++ b/monitoring-frontend/src/app/modules/auth/pages/login-page/login-page.component.html
@@ -34,6 +34,10 @@
           styleClass="w-full"
           [disabled]="loginForm.invalid"
         ></p-button>
+        <p class="text-center">
+          <span>¿has olvidado tu contraseña?</span>
+          <a class="no-underline"> Recuperala</a>
+        </p>
       </form>
     </ng-template>
     <ng-template pTemplate="footer">
