--- a/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-detail-page/monitoring-detail-page.component.css
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/monitoring-detail-page/monitoring-detail-page.component.css
@@ -1,3 +1,19 @@
 :host {
   display: block;
 }
+
+.two-column-grid {
+  display: flex;
+  justify-content: space-between; /* Para distribuir las columnas */
+}
+
+.two-column-grid .column {
+  width: calc(50% - 10px); /* Para dejar espacio entre las columnas */
+  margin-right: 20px; /* Espacio entre las columnas */
+}
+
+.two-column-grid .row {
+  margin-bottom: 20px; /* Espacio entre las filas */
+}
+
+
