Se agregan mas carreras

--- a/monitoring-frontend/src/app/modules/monitoring/pages/edit-profile/edit-profile.component.html
+++ b/monitoring-frontend/src/app/modules/monitoring/pages/edit-profile/edit-profile.component.html
@@ -30,7 +30,7 @@
     <section formGroupName="profile">
       <!-- First name  -->
       <div class="flex flex-column gap-2 w-full">
-        <label for="firstName">firstName</label>
+        <label for="firstName">Nombre</label>
         <input
         pInputText
         id="firstName"
