Se ajusta el componente register
Se agrega el required de la contraseña, para que contenga mínimo una letra y un numero

--- a/monitoring-frontend/src/app/modules/auth/pages/register-page/register-page.component.html
+++ b/monitoring-frontend/src/app/modules/auth/pages/register-page/register-page.component.html
@@ -37,6 +37,9 @@
       @if (registerForm.controls.password.hasError("minlength")) {
         <p class="text-red-600">La contraseña debe tener mínimo 6 carácteres</p>
       }
+      @else if(registerForm.controls['password'].hasError('pattern') && !registerForm.controls['password'].hasError('minlength')) {
+        <p class="text-red-600">La contraseña debe contener al menos una letra y un número</p>
+      }
     </div>
     <!-- Password -->
     <!-- Profile -->
